implement create order and get order detail
* implement create order and get order detail

* fix naming branch booking